# Phystech.edu

./: .gitignore  Procfile  README.md  app.py  pyproject.toml  requirements.txt  route.py  server.py  settings.py  utils.py
.github/workflows/: mail.yml
Admin/: admin.py
Calendar/: calendar.py
Cloud/: cloud_main.py
DataBase/: useDataBase.py  use_DataBase.py
DayPlan/: day_plan.py
Handlers/: handlers.py
Login/: authorization.py  cabinet.py  forms.py  registration.py
MainPage/: main_page.py
Mode1/: mode1.py
Mode2/: mode2.py
News/: news.py
SelectedProducts/: selectedProducts.py
ServiceFiles/: links.py  settings.py
Tests/: test_200.py  tests.py
Trainer/: trainer_students.py
server/Hendler/: handler.py
server/admin/: admin.py
server/calendar/: calendar.py
server/cloud/: cloud_main.py
server/database/: use_DataBase.py
server/day_plan/: day_plan.py
server/food_controler/: food_controller.py  forms.py  utils.py
server/hendler/: handler.py
server/login/: authorization.py  cabinet.py  forms.py  process_registration.py  registration.py  utils.py
server/main_page/: main_page.py
server/news/: news.py
server/selected_products/: selectedProducts.py
server/service_files/: links.py
server/trainer/: trainer_students.py
server/trains/: forms.py  trains_controller.py
static/: style_process_registration.css
templates/: Base.html
templates/Admin/: admin.html
templates/Calendar/: calendar.html
templates/DayPlan/: add_product.html  add_recipe.html  day_plan.html  physical_exercises.html
tests/: test_200.py  tests.py
(+36 files in other folders)
